--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-static",
   "description": "A progressive static site generator for React",
-  "version": "5.7.4",
+  "version": "5.6.8",
   "license": "MIT",
   "repository": "https://github.com/nozzle/react-static",
   "main": "lib/index.js",
@@ -13,8 +13,8 @@
     "react-static": "./bin/react-static"
   },
   "scripts": {
-    "build": "rimraf lib && rimraf node_modules/react-static && babel src --out-dir lib && yarn prepGitignore",
-    "watch": "rimraf lib && rimraf node_modules/react-static && babel -w src --out-dir lib",
+    "build": "rimraf lib && babel src --out-dir lib && yarn prepGitignore",
+    "watch": "rimraf lib && babel -w src --out-dir lib",
     "postpublish": "git push --tags",
     "prepublishOnly": "yarn build && yarn test",
     "publishNext": "yarn publish --tag next",
@@ -89,11 +89,8 @@
     "serve": "^6.4.10",
     "shorthash": "^0.0.2",
     "slash": "^1.0.0",
-    "socket.io": "^2.1.0",
-    "socket.io-client": "^2.1.0",
     "style-loader": "^0.19.0",
     "swimmer": "^1.1.1",
-    "update-notifier": "^2.4.0",
     "url-loader": "^0.6.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
